--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -28,8 +28,8 @@ jobs:
                   python-version: "3.11"
 
             - name: Show env variables
-                run: |
-                    printenv
+              run: |
+                  printenv | sort
 
             - name: Install just
               run: |
