--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -76,8 +76,8 @@ jobs:
                   python-version: ${{ matrix.python-version }}
 
             - name: Show env variables
-                run: |
-                    printenv
+              run: |
+                  printenv | sort
 
             - name: Install project + dependencies
               run: |
