--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,55 @@
 {
     "recommendations": [
+        // sorted alphabetically
+
+        // support for the Ruff linter.
+        // homepage: https://marketplace.visualstudio.com/items?itemName=charliermarsh.ruff
+        // repo: https://github.com/astral-sh/ruff-vscode
+        "charliermarsh.ruff",
+
+        // support for dotenv file syntax
+        // homepage: https://marketplace.visualstudio.com/items?itemName=mikestead.dotenv
+        // repo: https://github.com/mikestead/vscode-dotenv
+        "mikestead.dotenv",
+
+        // support for the Mypy type checker
+        // homepage: https://marketplace.visualstudio.com/items?itemName=ms-python.mypy-type-checker
+        // repo: https://github.com/microsoft/vscode-mypy
+        "ms-python.mypy-type-checker",
+
+        // python language support with extension access points for IntelliSense (Pylance), Debugging (Python Debugger), linting, formatting, refactoring, unit tests, and more.
+        // homepage: https://marketplace.visualstudio.com/items?itemName=ms-python.python
+        // repo: https://github.com/Microsoft/vscode-python
         "ms-python.python",
+
+        // performant, feature-rich language server for Python in VS Code
+        // homepage: https://marketplace.visualstudio.com/items?itemName=ms-python.vscode-pylance
+        // repo: https://github.com/microsoft/pylance-release
         "ms-python.vscode-pylance",
-        "ms-vscode.makefile-tools",
+
+        // homepage: https://marketplace.visualstudio.com/items?itemName=ms-toolsai.jupyter
+        // repo: https://github.com/Microsoft/vscode-jupyter
+        // docs: https://code.visualstudio.com/docs/datascience/jupyter-notebooks
+        "ms-toolsai.jupyter",
+
+        // support for the justfile syntax
+        // homepage: https://marketplace.visualstudio.com/items?itemName=nefrob.vscode-just-syntax
+        // repo: https://github.com/nefrob/vscode-just
+        "nefrob.vscode-just-syntax",
+
+        // visualize strange unicode characters
+        // homepage: https://marketplace.visualstudio.com/items?itemName=nhoizey.gremlins
+        // repo: https://github.com/nhoizey/vscode-gremlins
+        "nhoizey.gremlins",
+
+        // open html files in your browser
+        // homepage: https://marketplace.visualstudio.com/items?itemName=peakchen90.open-html-in-browser
+        // repo: https://github.com/peakchen90/vscode-open-in-default-browser
         "peakchen90.open-html-in-browser",
-        "zeshuaro.vscode-python-poetry"
+
+        // better toml language support
+        // homepage: https://marketplace.visualstudio.com/items?itemName=tamasfe.even-better-toml
+        // repo: https://github.com/tamasfe/taplo
+        "tamasfe.even-better-toml",
     ]
 }
