--- a/pyproject.toml
+++ b/pyproject.toml
@@ -219,6 +219,7 @@ ignore = [
     "ANN003",  # Missing type annotation for `**kwargs`
 ]
 
+
 select = [
     "A",     # flake8-builtins
     "ANN",   # flake8-annotations
@@ -279,7 +280,11 @@ known-first-party = ["autoread_dotenv"]
 known-local-folder = ["_helpers"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/**" = ["INP001"]  # tests-dir should not be a python-package
+"tests/**" = [
+    "ANN001", # Missing type annotation
+    "D103",   # Missing docstring in public function
+    "INP001", # tests-dir should not be a python-package
+    ]
 
 
 [tool.uv]
