optimize ruff-settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -202,73 +202,16 @@ ignore = [
     # D203 conflicts withs D211
     "D203", # 1 blank line required before class docstring
     # "D211", # No blank lines allowed before class docstring
-
     # D212 conflicts with D213
-    "D212",    # Multi-line docstring summary should start at the first line
+    "D212",  # Multi-line docstring summary should start at the first line
     # "D213",  # Multi-line docstring summary should start at the second line
-    # conflicts with 'ruff format'
-    "COM812",  # Trailing comma missing
-    "ISC001",  # Implicitly concatenated string literals on one line
-    # style preferences - wontfix
-    "G004",    # Logging statement uses f-string
-    "G201",    # Logging .exception(...) should be used instead of .error(..., exc_info=True)
-    "RET504",  # Unnecessary assignment before `return` statement
-    "TRY400",  # Use `logging.exception` instead of `logging.error`
-    # TODO: fix all these warnings below
-    "ANN002",  # Missing type annotation for `*args`
-    "ANN003",  # Missing type annotation for `**kwargs`
+    "ERA001", # Found commented-out code
 ]
+select = ["ALL"]
 
 
-select = [
-    "A",     # flake8-builtins
-    "ANN",   # flake8-annotations
-    "ARG",   # flake8-unused-arguments
-    "ASYNC", # flake8-async
-    "B",     # flake8-bugbear
-    "BLE",   # flake8-blind-except
-    "C4",    # flake8-comprehensions
-    "COM",   # flake8-commas
-    "D",     # pydocstyle
-    "DJ",    # flake8-django
-    "DTZ",   # flake8-datetimez
-    "E",     # pycodestyle
-    "EM",    # flake8-errmsg
-    "EXE",   # flake8-executable
-    "F",     # pyflakes
-    "FA",    # flake8-future-annotations
-    "FBT",   # flake8-boolean-trap
-    "FLY",   # flynt
-    "FURB",  # refurb
-    "G",     # flake8-logging-format
-    "I",     # isort
-    "ICN",   # flake8-import-conventions
-    "INP",   # flake8-no-pep420
-    "INT",   # flake8-gettext
-    "ISC",   # flake8-implicit-str-concat
-    "LOG",   # flake8-logging
-    "N",     # pep8-naming
-    "PERF",  # perflint
-    "PIE",   # flake8-pie
-    "PGH",   # pygrep-hooks
-    "PL",    # pylint
-    "PYI",   # flake8-pyi
-    "Q",     # flake8-quotes
-    "RET",   # flake8-return
-    "RSE",   # flake8-raise
-    "RUF",   # ruff-specific rules
-    "SIM",   # flake8-simplify
-    "SLF",   # flake8-self
-    "SLOT",  # flake8-slots
-    "T10",   # flake8-debugger
-    "TC",    # flake8-type-checking
-    "TID",   # flake8-tidy-imports
-    "TRY",   # tryceratops
-    "UP",    # pyupgrade
-    "W",     # pycodestyle
-    "YTT",   # flake8-2020
-]
-
+[tool.ruff.lint.flake8-annotations]
+allow-star-arg-any = true
 
 [tool.ruff.lint.isort]
 # https://docs.astral.sh/ruff/settings/#lintisort
@@ -284,6 +227,7 @@ known-local-folder = ["_helpers"]
     "ANN001", # Missing type annotation
     "D103",   # Missing docstring in public function
     "INP001", # tests-dir should not be a python-package
+    "S101",   # Use of `assert` detected
     ]
 
 
