--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -180,6 +180,7 @@ repos:
       - id: ruff-format
         name: ruff format
         entry: ruff format
+        args: [--fix, --exit-non-zero-on-fix]
         language: system
         types: [python]
 
