--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,13 +13,19 @@
         ".env.template": "dotenv"
     },
     "files.exclude": {
-        "**/__pycache__": true
+        "**/__pycache__": true,
+        "lib/": true,
+        "lib64/": true
+
     },
     "files.trimTrailingWhitespace": true,
 
     "[json]": {
         "editor.formatOnSave": false
     },
+
+    // "jupyter.defaultKernel": "${workspaceFolder}/.venv/bin/python",
+    // "jupyter.jupyterServerType": "local",
 
     "mypy-type-checker.args": ["--config-file", "${workspaceFolder}/pyproject.toml"],
     "mypy-type-checker.cwd": "${workspaceFolder}/",
@@ -37,7 +43,6 @@
     "python.testing.pytestArgs": [
         "--color=yes",
         "--cov=src",
-        // "--cov=autoread_dotenv",
         // "--cov-fail-under=90",
         // "--cov-report xml:${workspaceFolder}/var/coverage/pytest-cobertura.xml",
         // "--cov-report html:${workspaceFolder}/var/coverage/html",
@@ -47,7 +52,7 @@
         "-v",
         "${workspaceFolder}/tests/",
     ],
-    "ruff.configuration": "${workspaceFolder}/project.toml",
+    "ruff.configuration": "${workspaceFolder}/pyproject.toml",
     // "ruff.lint.args": ["--extend-ignore=F401"],
     "ruff.nativeServer": "on",
 
