--- a/.github/workflows/dependabot-auto-merge.yaml
+++ b/.github/workflows/dependabot-auto-merge.yaml
@@ -1,23 +1,23 @@
 # see https://github.com/ahmadnassri/action-dependabot-auto-merge
-name: Auto Merge Dependabot
+# name: Auto Merge Dependabot
 
-on:
-  pull_request_target:
-    types:
-      - opened
-      - synchronize
-      - reopened
+# on:
+#   pull_request_target:
+#     types:
+#       - opened
+#       - synchronize
+#       - reopened
 
-permissions:
-  contents: write
-  pull-requests: write
+# permissions:
+#   contents: write
+#   pull-requests: write
 
-jobs:
-  auto-merge:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2
-        with:
-          target: minor
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+# jobs:
+#   auto-merge:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: ahmadnassri/action-dependabot-auto-merge@v2
+#         with:
+#           target: minor
+#           github-token: ${{ secrets.GITHUB_TOKEN }}
