--- a/pyproject.toml
+++ b/pyproject.toml
@@ -198,11 +198,13 @@ known-local-folder = ["_helpers"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = [
-    "ANN001", # Missing type annotation
-    "D103",   # Missing docstring in public function
-    "INP001", # tests-dir should not be a python-package
-    "S101",   # Use of `assert` detected
+    "ANN001",  # Missing type annotation
+    "D103",    # Missing docstring in public function
+    "INP001",  # tests-dir should not be a python-package
+    "PLC0415", # `import` should be at the top-level of a file
+    "S101",    # Use of `assert` detected
     ]
+
 
 
 [tool.ty]
