--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,9 +7,17 @@ build:
     os: ubuntu-22.04
     tools:
         python: "3.12"
+    # jobs:
+    #     post_create_environment:
+    #         - just install-rtd
     jobs:
-        post_create_environment:
-            - just install-rtd
+        create_environment:
+            - asdf plugin add uv
+            - asdf install uv latest
+            - asdf global uv latest
+            - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --only-group docs --link-mode=copy
+        install:
+            - "true"
 
 formats:
     - htmlzip
