--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,9 +51,18 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "autoread-dotenv>=1.0.3",
     "pylint>=3.1.0",
     "ruff>=0.8.6",
+]
+docs = [
+    "autoapi>=2.0",
+    "docutils!=0.21",  # Work-around for https://github.com/pypi/warehouse/issues/15749
+    "markupsafe>=2.1",
+    # "myst-parser>=3.10",
+    "recommonmark>=0.7",
+    "sphinx>=4.4",
+    "sphinx-rtd-theme>=1.0",
+    "sphinx-autoapi>=1.8",
 ]
 ipython = [
     "ipython>=8.0",
