use single-quotes in .env

--- a/.env.template
+++ b/.env.template
@@ -29,12 +29,12 @@
 #     Usability-tip: Add following alias to your ~/.bashrc
 #     >> alias source-env='set -a && source .env && set +a'
 
-BASE_DIR="__CWD__"
-PRE_COMMIT_HOME="__CWD__/var/cache/pre-commit"
-PYLINTHOME="__CWD__/var/cache/pylint"
-TMP="__CWD__/var/tmp"
-TMPDIR="__CWD__/var/tmp"
-TEMP="__CWD__/var/tmp"
+BASE_DIR='__CWD__'
+PRE_COMMIT_HOME='__CWD__/var/cache/pre-commit'
+PYLINTHOME='__CWD__/var/cache/pylint'
+TMP='__CWD__/var/tmp'
+TMPDIR='__CWD__/var/tmp'
+TEMP='__CWD__/var/tmp'
 
 # unit-testing of sitecustomize -> autoread_dotenv
 FOO='foo'
