--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,8 @@ testing = [
     "pytest>=8.1.1",
     "pytest-clarity>=1.0",
     "pytest-cov>=5.0.0",
-    "pytest-dotenv>=0.5.2",
+    "pytest-dotenv>=0.5",
+    "pytest-xdist>=3.6",
 ]
 typing = [
     "mypy>=1.14.1",
