--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@
 
 #   - Symlinks are always files, even if they point to a dir. So never put a / at the end.
 
-# archived files
-/_archive/
+# exclude claude for now
+.claude
 
 # dev-symlinks to .venv to make bin/python work
 /bin
@@ -31,7 +31,7 @@
 # exclude actual virtual-environment
 /.venv*
 
-# distribution / packaging
+# default build directory
 /dist/
 
 # .env can contain secrets
@@ -39,10 +39,8 @@
 # but include .env.template
 !.env.template
 
-# exclude toplevel var-dir
-/var/
-
 # excluded generated python-files Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-*$py.class
+
+# exclude toplevel var-dir
+/var/
