--- a/pyproject.toml
+++ b/pyproject.toml
@@ -208,12 +208,15 @@ known-first-party = ["autoread_dotenv"]
 known-local-folder = ["_helpers"]
 
 [tool.ruff.lint.per-file-ignores]
+"docs/**" = [
+    "INP001",  # docs-dir should not be a python-package
+    ]
 "tests/**" = [
     "ANN001",  # Missing type annotation
     "D103",    # Missing docstring in public function
     "INP001",  # tests-dir should not be a python-package
-    "PLC0415", # `import` should be at the top-level of a file
-    "S101",    # Use of `assert` detected
+    "PLC0415", # import should be at the top-level of a file
+    "S101",    # Use of assert detected
     ]
 
 
