--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,15 +1,16 @@
 # Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+#
+# References:
+#  - https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+#  - https://docs.readthedocs.com/platform/stable/build-customization.html
+#  - https://github.com/astral-sh/uv/issues/10074
 
 version: 2
 
 build:
-    os: ubuntu-22.04
+    os: ubuntu-24.04
     tools:
-        python: "3.12"
-    # jobs:
-    #     post_create_environment:
-    #         - just install-rtd
+        python: "3.14"
     jobs:
         create_environment:
             - asdf plugin add uv
@@ -22,7 +23,7 @@ build:
 formats:
     - htmlzip
     - pdf
-    - epub
+    # - epub
     # - all
 
 sphinx:
