--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -21,6 +21,7 @@ name: Linting
 
 concurrency:
     # see https://docs.github.com/en/actions/using-jobs/using-concurrency
+    # Run jobs on all commits - we're on free tier and want full diagnostic history
     # cancel-in-progress: ${{ github.event_name == 'pull_request' }}
     group: ${{ github.workflow }}-${{ github.ref }}
 
@@ -55,6 +56,7 @@ jobs:
         runs-on: ${{ matrix.os }}
         timeout-minutes: 5
         strategy:
+            fail-fast: false
             matrix:
                 os:
                     - ubuntu-latest
