--- a/.env.template
+++ b/.env.template
@@ -29,9 +29,17 @@
 #     Usability-tip: Add following alias to your ~/.bashrc
 #     >> alias source-env='set -a && source .env && set +a'
 
+
+# project-directory
 BASE_DIR='__CWD__'
+
+# pre-commit
 PRE_COMMIT_HOME='__CWD__/var/cache/pre-commit'
+
+# pylint
 PYLINTHOME='__CWD__/var/cache/pylint'
+
+# temporary-directory
 TMP='__CWD__/var/tmp'
 TMPDIR='__CWD__/var/tmp'
 TEMP='__CWD__/var/tmp'
