--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -184,6 +184,14 @@ repos:
         language: system
         types: [python]
 
+      - id: mdformat
+        name: mdformat
+        description: format markdown files
+        entry: mdformat
+        language: system
+        types: [markdown]
+        exclude: '^_archive/|^\.venv/'
+
       - id: uv-lock-check
         name: uv lock check
         description: check uv.lock is in sync
