--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,10 @@ docs = [
     "sphinx>=4.4",
     "sphinx-rtd-theme>=1.0",
     "sphinx-autoapi>=1.8",
+    "mdformat>=0.7.17",
+    "mdformat-gfm>=0.3.6",
+    "mdformat-frontmatter>=2.0.8",
+    "mdformat-tables>=1.0.0",
 ]
 ipython = [
     "ipython>=8.0",
@@ -126,6 +130,13 @@ include = ["src/*"]
 [tool.coverage.run]
 branch = true
 data_file = "var/cache/coverage/coverage.db"
+
+
+[tool.mdformat]
+# https://mdformat.readthedocs.io/en/stable/users/configuration_file.html
+wrap = "keep"   # preserve line wrapping
+number = false  # don't renumber ordered lists
+end_of_line = "lf"
 
 
 [tool.mypy]
@@ -218,7 +229,6 @@ known-local-folder = ["_helpers"]
     "PLC0415", # import should be at the top-level of a file
     "S101",    # Use of assert detected
     ]
-
 
 
 [tool.ty]
