--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,10 +65,14 @@ docs = [
     "sphinx>=4.4",
     "sphinx-rtd-theme>=1.0",
     "sphinx-autoapi>=1.8",
-    "mdformat>=0.7.17",
-    "mdformat-gfm>=0.3.6",
-    "mdformat-frontmatter>=2.0.8",
-    "mdformat-tables>=1.0.0",
+    "mdformat>=0.7.17,<0.7.19; python_version < '3.9'",
+    "mdformat>=0.7.17; python_version >= '3.9'",
+    "mdformat-gfm>=0.3.5,<0.3.6; python_version < '3.9'",
+    "mdformat-gfm>=0.3.6; python_version >= '3.9'",
+    "mdformat-frontmatter>=2.0.1,<2.0.8; python_version < '3.9'",
+    "mdformat-frontmatter>=2.0.8; python_version >= '3.9'",
+    "mdformat-tables>=0.4.1,<1.0.0; python_version < '3.9'",
+    "mdformat-tables>=1.0.0; python_version >= '3.9'",
 ]
 ipython = [
     "ipython>=8.0",
