use 3.14 by default

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -189,6 +189,7 @@ repos:
         description: format markdown files
         entry: mdformat
         language: system
+        language_version: python3.14
         types: [markdown]
         exclude: '^_archive/|^\.venv/'
 
