--- a/pyproject.toml
+++ b/pyproject.toml
@@ -260,3 +260,9 @@ keyring-provider = "subprocess"
 managed = true
 package = true
 default-groups = "all"
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
