--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,12 @@ build-backend = "uv_build"
 
 [project]
 name = "autoread_dotenv"
-version = "1.0.4"
+version = "1.1.0.dev1"
 description = "Automatically set env-vars at the beginning of every python-process in your in-project virtualenv."
 readme = "docs/readme.md"
 authors = [{ name = "Wouter Vanden Hove", email = "wouter@libranet.eu" }]
 maintainers = [{ name = "Wouter Vanden Hove", email = "wouter@libranet.eu" }]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = { file = "license.md" }
 keywords = ["entrypoints", "dotenv", "sitecustomize"]
 classifiers = [
@@ -41,7 +41,6 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
     "Typing :: Typed",
@@ -60,19 +59,15 @@ docs = [
     "autoapi>=2.0",
     "docutils!=0.21",  # Work-around for https://github.com/pypi/warehouse/issues/15749
     "markupsafe>=2.1",
+    "mdformat>=0.7.17",
+    "mdformat-gfm>=0.3.6",
+    "mdformat-frontmatter>=2.0.8",
+    "mdformat-tables>=1.0.0",
     # "myst-parser>=3.10",
     "recommonmark>=0.7",
     "sphinx>=4.4",
     "sphinx-rtd-theme>=1.0",
     "sphinx-autoapi>=1.8",
-    "mdformat>=0.7.17,<0.7.19; python_version < '3.9'",
-    "mdformat>=0.7.17; python_version >= '3.9'",
-    "mdformat-gfm>=0.3.5,<0.3.6; python_version < '3.9'",
-    "mdformat-gfm>=0.3.6; python_version >= '3.9'",
-    "mdformat-frontmatter>=2.0.1,<2.0.8; python_version < '3.9'",
-    "mdformat-frontmatter>=2.0.8; python_version >= '3.9'",
-    "mdformat-tables>=0.4.1,<1.0.0; python_version < '3.9'",
-    "mdformat-tables>=1.0.0; python_version >= '3.9'",
 ]
 ipython = [
     "ipython>=8.0",
