--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,8 +63,7 @@ docs = [
     "mdformat-gfm>=0.3.6",
     "mdformat-frontmatter>=2.0.8",
     "mdformat-tables>=1.0.0",
-    # "myst-parser>=3.10",
-    "recommonmark>=0.7",
+    "myst-parser>=3.0",
     "sphinx>=4.4",
     "sphinx-rtd-theme>=1.0",
     "sphinx-autoapi>=1.8",
