--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ packaging = [
 pre-commit = [
     "pre-commit>=3.5",  # 3.5 still supports python3.8
     "pre-commit-hooks>=5.0.0",
+    "prek>=0.2.30",
 ]
 security = [
     "bandit[toml]>1.7",
