--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ requires-python = ">=3.9"
 license = { file = "license.md" }
 keywords = ["entrypoints", "dotenv", "sitecustomize"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
@@ -70,14 +70,14 @@ docs = [
 ]
 ipython = [
     "ipython>=8.0",
-    "rich>=13.9.4",
+    "rich>=13.9",
 ]
 packaging = [
     "pyroma>=4.2",
 ]
 pre-commit = [
     "pre-commit>=3.5",  # 3.5 still supports python3.8
-    "pre-commit-hooks>=5.0.0",
+    "pre-commit-hooks>=5.0",
     "prek>=0.2.30",
 ]
 security = [
@@ -87,13 +87,13 @@ security = [
 testing = [
     "pytest>=8.1.1",
     "pytest-clarity>=1.0",
-    "pytest-cov>=5.0.0",
+    "pytest-cov>=5.0",
     "pytest-dotenv>=0.5",
     "pytest-xdist>=3.6",
 ]
 typing = [
     "mypy[reports]>1.1",
-    "ty>=0.0.1a17",
+    "ty>=0.0.10",
 ]
 
 # https://packaging.python.org/en/latest/guides/creating-and-discovering-plugins/
