--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: POSIX :: Linux",
+    "Operating System :: MacOS",
     "Operating System :: Microsoft :: Windows",
     "Programming Language :: Python :: 3.14",
     "Programming Language :: Python :: 3.13",
@@ -76,7 +77,7 @@ packaging = [
     "pyroma>=4.2",
 ]
 pre-commit = [
-    "pre-commit>=3.5",  # 3.5 still supports python3.8
+    "pre-commit>=3.5",
     "pre-commit-hooks>=5.0",
     "prek>=0.2.30",
 ]
@@ -141,7 +142,7 @@ end_of_line = "lf"
 
 [tool.mypy]
 # cfr https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
-cache_dir = "$MYPY_CONFIG_FILE_DIR/var/cache/mypy"
+cache_dir = "${MYPY_CONFIG_FILE_DIR}/var/cache/mypy"
 check_untyped_defs = true
 disallow_untyped_defs = true
 exclude = "^bin/"
@@ -185,7 +186,6 @@ pythonpath = ["tests"]  # allows for importing helper-module
 
 
 [tool.ruff]
-# https://beta.ruff.rs/docs/configuration/
 # https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml
 cache-dir = "var/cache/ruff" # relative to project_root
 line-length = 120
@@ -215,7 +215,7 @@ force-single-line = false
 from-first = false
 known-third-party = []
 known-first-party = ["autoread_dotenv"]
-known-local-folder = ["_helpers"]
+# known-local-folder = ["_helpers"]
 
 [tool.ruff.lint.per-file-ignores]
 "docs/**" = [
