--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,25 +53,29 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pylint>=3.1.0",
-    "ruff>=0.8.6",
+    "toml-cli >=0.7.0",
 ]
 docs = [
     "autoapi>=2.0",
     "docutils!=0.21",  # Work-around for https://github.com/pypi/warehouse/issues/15749
     "markupsafe>=2.1",
-    "mdformat>=0.7.17",
-    "mdformat-gfm>=0.3.6",
-    "mdformat-frontmatter>=2.0.8",
-    "mdformat-tables>=1.0.0",
+    "mdformat>=0.7",
+    "mdformat-gfm>=0.3",
+    "mdformat-frontmatter>=2.0",
+    "mdformat-tables>=1.0",
     "myst-parser>=3.0",
-    "sphinx>=4.4",
-    "sphinx-rtd-theme>=1.0",
-    "sphinx-autoapi>=1.8",
+    "sphinx>=7.1",
+    "sphinx-autoapi>=3.3",
+    "sphinx-rtd-theme>=3.0",
 ]
 ipython = [
-    "ipython>=8.0",
+    "ipdb>=0.13",
+    "ipython>=8.12",
     "rich>=13.9",
+]
+linting = [
+    "pylint>=3.2",
+    "ruff>=0.8",
 ]
 packaging = [
     "pyroma>=4.2",
@@ -79,22 +83,22 @@ packaging = [
 pre-commit = [
     "pre-commit>=3.5",
     "pre-commit-hooks>=5.0",
-    "prek>=0.2.30",
+    "prek>=0.2",
 ]
 security = [
-    "bandit[toml]>1.7",
+    "bandit[toml]>=1.7",
     "safety>=2.3",
 ]
 testing = [
-    "pytest>=8.1.1",
+    "pytest>=8.3",
     "pytest-clarity>=1.0",
     "pytest-cov>=5.0",
     "pytest-dotenv>=0.5",
     "pytest-xdist>=3.6",
 ]
 typing = [
-    "mypy[reports]>1.1",
-    "ty>=0.0.10",
+    "mypy[reports]>=1.1",
+    "ty>=0.0",
 ]
 
 # https://packaging.python.org/en/latest/guides/creating-and-discovering-plugins/
@@ -251,12 +255,8 @@ include = [
 ]
 
 [tool.uv]
-<<<<<<< Updated upstream
 # Settings reference: https://docs.astral.sh/uv/reference/settings/
 keyring-provider = "subprocess"
-=======
-# https://docs.astral.sh/uv/reference/settings/
->>>>>>> Stashed changes
 managed = true
 package = true
 default-groups = "all"
