--- a/pyproject.toml
+++ b/pyproject.toml
@@ -198,12 +198,10 @@ line-length = 120
 ignore = [
     # COM812 may cause conflicts when used with the ruff formatter
     "COM812",
-    # D203 conflicts withs D211
+    # D211 conflicts with D203 - we prefer D211, so we ignore D203
     "D203", # 1 blank line required before class docstring
-    # "D211", # No blank lines allowed before class docstring
-    # D212 conflicts with D213
-    "D212",  # Multi-line docstring summary should start at the first line
-    # "D213",  # Multi-line docstring summary should start at the second line
+    # D212 conflicts with D213 - we prefer D212, so we ignore D213
+    "D213",  # Multi-line docstring summary should start at the second line
     "ERA001", # Found commented-out code
 ]
 select = ["ALL"]
